package jeu;

public class ActionInconnueException extends RuntimeException {
    public ActionInconnueException(String message) {
        super(message);
    }
}
